[package]
name = "tcp"
version = "0.1.0"
authors = ["Temitope Adebayo <tasvln@outlook.com>"]
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "=1.8.0", features = ["v4", "serde"] }
bincode = "1.3"